--- a/mysite/blog/static/css/basic.css
+++ b/mysite/blog/static/css/basic.css
@@ -12,29 +12,114 @@ h2.blog-post-title a:hover {
     color: #999;
 }
 .sidebar {
-    background-color: rgb(216, 209, 209);
+    background-color: rgb(243, 235, 235);
+    border-radius: 15px 0 0 15px ;
     
 }
 
 .sidebar h2 {
     text-align: center;
 }
+.sidebar-link {
+    padding: 10px;
+    text-decoration: none !important;
+    font-size: 22px;
+
+}
+
+.search-box {
+    border-radius: 40px;
+    height: 40px;
+    background-color: #3b3333;
+    width: 75%;
+    color: whitesmoke;
+    padding: 10px;
+}
 
 #search-box {
-    width: 500px;
+    width: 100%;
+    border-radius: 40px;
+    padding: 0;
+    margin-top: -3px;
+    background: none;
+    outline: none;
+    border:none;
+    font-size: 18px;
+    color: whitesmoke;
+  
+}
+#result {
+    background-color: #3b3333;
+    border-radius: 40px;
+    padding: 20px;
+    width: 75%;
+    display: none;
+    color:whitesmoke;
+}
+
+#result a{
+    text-decoration: none;
+    color: whitesmoke;
+    font-size: 20px;
+    cursor: pointer;
 }
 #home_link a{
     text-decoration: none;
     cursor: pointer;
     color:rgb(78, 44, 199);
+    
 }
 
 #home_link a:hover{
     color: rgb(105, 105, 190);
 }
-
+.post{
+    margin: 15px 15px 15px 0;
+    width: 75%;
+    padding: 15px;
+    border-radius: 15px;
+    border: 1px solid;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
 .post-image {
     width: 550px;
     height: 350px;
+    border-radius: 15px;
+    border: 1px solid;
 }
 
+.slider {
+    font-size: 50px;
+    position: sticky;
+    float: right;
+    top:0;
+    display: none;
+
+}
+
+
+.slider span svg{
+    border: 2px solid;
+    border-radius: 50%;
+}
+
+.slider span svg:hover{
+    opacity: 0.7;
+}
+
+span.text {
+    font-style: italic;
+}
+
+.comment{ 
+    position: relative;
+}
+
+.comment hr{
+    width: 25%;
+    position: absolute;
+    top: 35px;
+
+}
