Added class for latest posts ul

--- a/mysite/blog/templates/blog/post/latest_posts.html
+++ b/mysite/blog/templates/blog/post/latest_posts.html
@@ -1,7 +1,6 @@
-<ul>
+
     {% for post in latest_posts %}
-    <li>
-        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-    </li>
+
+        <a href="{{ post.get_absolute_url }}" class="sidebar-link">{{ post.title }}</a>
+<br>
     {% endfor %}
-</ul>
