--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -8,34 +8,39 @@
     <h2>Posts taggit with {{ tag.name }}</h2>
     {% endif %}
     <br>
-    <h3><input type="text" id='search-box', placeholder="Поиск по заголовкам"></h3>
+    <div class="search-box">
+        <input type="text" id='search-box' , placeholder="Поиск по заголовкам">
+    </div>
     <div id='result'></div>
     {% for post in posts %}
 
-    <h2 class="blog-post-title">
+    <div class="post">
+        <h2 class="blog-post-title">
 
-        <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-    </h2>
-    <img src="{% if post.image %} 
-        {{ post.image.url }}
-    {% else %}
-        {% static 'css/no_image.jpg' %}
-    {% endif %}" class='post-image'>
-    <p class="blog-post-meta">{{ post.publish }} <a href="#"> {{ post.author }}</a>
-        <br>
-        {% for tag in post.tags.all %}
-        <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
-            {{ tag.name }}
-        </a>
-        {% if not forloop.last %}, {% endif %}
-        {% endfor %}
-    </p>
+            <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+        </h2>
+        <img src="{% if post.image %} 
+            {{ post.image.url }}
+        {% else %}
+            {% static 'css/no_image.jpg' %}
+        {% endif %}" class='post-image'>
+        <p class="blog-post-meta">{{ post.publish }} <a href="#"> {{ post.author }}</a>
+            <br>
+            {% for tag in post.tags.all %}
+            <a href="{% url 'blog:post_list_by_tag' tag.slug %}">
+                {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+            {% endfor %}
+        </p>
 
 
-    <p>
-        {{ post.body|truncatewords:45|linebreaks }}
-    </p>
+        <p>
+            {{ post.body|truncatewords:45|linebreaks }}
+        </p>
 
+
+    </div>
     {% endfor %}
 
 
