--- a/mysite/blog/templates/blog/post/latest_posts.html
+++ b/mysite/blog/templates/blog/post/latest_posts.html
@@ -1,6 +1,6 @@
 
     {% for post in latest_posts %}
 
-        <a href="{{ post.get_absolute_url }}" class="sidebar-link">{{ post.title }}</a>
+        <a href="{{ post.get_absolute_url }}" class="sidebar-link after">{{ post.title }}</a>
 <br>
     {% endfor %}
