--- a/mysite/blog/templates/blog/post/list.html
+++ b/mysite/blog/templates/blog/post/list.html
@@ -1,6 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load static %}
-{% block title %}Хэллоу{% endblock %}
+{% block title %}Список статей{% endblock %}
 
 {% block content %}
 <div class="blog">
