--- a/mysite/blog/templates/blog/post/detail.html
+++ b/mysite/blog/templates/blog/post/detail.html
@@ -25,7 +25,7 @@
 {% endfor %}
 
 {% with comments.count as total_comments %}
-<h2>{{ total_comments }} comment{{ total_comments|pluralize }}</h2>
+<h2>Всего комментариев : {{ total_comments }}</h2>
 {% endwith %}
 
 {% for comment in comments %}
@@ -36,13 +36,13 @@
    <hr>
 </div>
 {% empty %}
-<p>There is no comments yet</p>
+<p>Тут еще нету комментариев</p>
 {% endfor %}
 
 {% if new_comment %}
-<h2>Your comment has been added.</h2>
+<h2>Ваш комментарий был добавлен</h2>
 {% else %}
-<h2>Add a new comment</h2>
+<h2>Новый комментарий</h2>
 <form action="." method="post">
    <div class="container-fluid">
       <div class="row">
@@ -52,7 +52,7 @@
                {% csrf_token %}
                
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Отправить</button>
          </div>
       </div>
    </div>
