--- a/mysite/blog/templates/blog/post/update.html
+++ b/mysite/blog/templates/blog/post/update.html
@@ -3,7 +3,7 @@
 {% block title %}Редактирование{% endblock %}
 
 {% block content %}
-<h1>Search for posts</h1>
+<h1>Редактирование поста</h1>
 <form action="" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
